--- a/fitness/templates/index.html
+++ b/fitness/templates/index.html
@@ -1,7 +1,8 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="master.css">
+<link rel="stylesheet" href="{% static 'css/master.css'%}">
 <style>
 body {
   margin: 0;
@@ -129,16 +130,20 @@ section{
   height: 400px;
   margin-left: 50%
 }
+.bmi{
+  height: 250px;
+  margin-left: 200px;
+}
 </style>
 </head>
 <body>
 
   <div class="picture">
-    <img src="imgg.png" width=50px height=50px>
+    <img src="{% static 'img/imgg.png' %}" width=50px height=50px>
   </div>
 
 <div class="topnav">
-  <a class="active" href="#home">Trainers</a>
+  <a class="active" href="trainers">Trainers</a>
   <a href="#news">Workout</a>
   <a href="#contact">Health Plan</a>
   <a href="#about">About</a>
@@ -152,7 +157,7 @@ section{
   <h2>Top Navigation Example</h2>
 </div>
 <div class="container">
-  <img class="img" src="first.jpg" alt="Norway" style="width:50%;">
+  <img class="img" src="{% static 'img/first.jpg'%}" alt="Norway" style="width:50%;">
   <div class="text-block">
     <h2>Fitness</h2>
     <br>
@@ -161,7 +166,7 @@ section{
   </div>
 </div>
 <div class="container">
-  <img class="img1" src="food.jpg" alt="Norway" style="width:50%;">
+  <img class="img1" src="{% static 'img/food.jpg'%}" alt="Norway" style="width:50%;">
   <div class="text-block1">
     <h2>Food</h2>
     <br>
@@ -171,17 +176,38 @@ section{
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </div>
 </div>
-<div class="first">
-  <div class="container">
-    <div class="text-block1">
-    <h2><label for="height">Height: </label><input type="text" id="fname" placeholder="Your Height.."></h2>
-    <br>
-    <h2><label for="Weight">Weight: </label><input type="text" id="fname" placeholder="Your Weight.."></h2>
-    <br>
-    <button>Submit</button>
-  </div>
-</div>
-</div>
+    <div class="container">
+      <div class="bmi">
+        <h2>Calculate your BMI</h2>
+        <h3>Height</h3>
+        <h4>Feet</h4>
+        <form action="">
+        <select id="feet" name="feet">
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+        </select>
+        <label><h4>Inches</h4></label> 
+        <select id="Inches" name="country">
+            <option value="0">0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+            <option value="11">11</option>
+          </select>
+        <h3><label for="Weight">Weight: </label><input type="text" id="fname" placeholder="Your Weight.."></h3>
+        <button>Submit</button> 
+      </form>
+      </div>
+    </div>
+<div>
 <footer class="footer-distributed">
     <div class="footer-left">
         <h3>Company<span>logo</span></h3>
@@ -211,7 +237,7 @@ section{
       </div>
       <div>
         <i class="fa fa-envelope"></i>
-        <p><a href="mailto:support@company.com">support@company.com</a></p>
+        <p><a href="#">support@company.com</a></p>
       </div>
     </div>
     <div class="footer-right">
