--- a/fitness/templates/login.html
+++ b/fitness/templates/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -14,9 +15,9 @@ body, html {
 
 .bg-img {
   /* The image used */
-  background-image: url("first.jpg");
+  background-image: url("{% static 'img/login.jpg' %}");
 
-  min-height: 380px;
+  min-height: 600px;
 
   /* Center and scale the image nicely */
   background-position: center;
@@ -67,7 +68,6 @@ input[type=text]:focus, input[type=password]:focus {
 </head>
 <body>
 
-<h2>Form on Hero Image</h2>
 <div class="bg-img">
   <form class="container">
     <h1>Login</h1>
