--- a/fitness/templates/index.html
+++ b/fitness/templates/index.html
@@ -183,7 +183,7 @@ section{
 <div class="topnav">
   <a class="active" href="trainers">Trainers</a>
   <a href="#news">Workout</a>
-  <a href="#contact">Health Plan</a>
+  <a href="recepies">Health Plan</a>
   <a href="#about">About</a>
   <div id="mySidenav" class="sidenav">
     <a href="pricing" id="signin">Sign Up</a>
