--- a/fitness/templates/login.html
+++ b/fitness/templates/login.html
@@ -7,6 +7,16 @@
 body, html {
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0%;
+}
+.picture{
+  overflow: hidden;
+  background-color: rgb(24, 91, 179);
+}
+
+.picture img {
+  float: left;
+  clear:both;
 }
 
 * {
@@ -67,7 +77,9 @@ input[type=text]:focus, input[type=password]:focus {
 </style>
 </head>
 <body>
-
+    <div class="picture">
+        <img src="{% static 'img/imgg.png' %}" width=50px height=50px>
+    </div>
 <div class="bg-img">
   <form class="container">
     <h1>Login</h1>
