--- a/fitness/templates/signup.html
+++ b/fitness/templates/signup.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,7 +10,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box;}
 
 body{
-  background-image: url("sign up.jpeg");
+  background-image: url("{% static 'img/signup1.jpg' %}");
 }
 
 .input-container {
@@ -21,7 +22,7 @@ body{
 
 .icon {
   padding: 10px;
-  background: #4CAF50;
+  background: grey;
   color: white;
   min-width: 50px;
   text-align: center;
@@ -34,12 +35,12 @@ body{
 }
 
 .input-field:focus {
-  border: 2px solid #4CAF50;
+  border: 2px solid grey;
 }
 
 /* Set a style for the submit button */
 .btn {
-  background-color: #4CAF50;
+  background-color: grey;
   color: white;
   padding: 15px 20px;
   border: none;
@@ -51,10 +52,30 @@ body{
 .btn:hover {
   opacity: 1;
 }
+
+body, html {
+  height: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0%;
+}
+.picture{
+  overflow: hidden;
+  background-color: rgb(24, 91, 179);
+}
+
+.picture img {
+  float: left;
+  clear:both;
+}
+h2{
+  color: cornsilk;
+}
 </style>
 </head>
 <body>
-
+    <div class="picture">
+        <img src="{% static 'img/imgg.png' %}" width=50px height=50px>
+    </div>
 <form style="max-width:500px;margin:auto">
   <h2>Register Form</h2>
   <div class="input-container">
