--- a/fitness/templates/signup.html
+++ b/fitness/templates/signup.html
@@ -93,6 +93,14 @@ h2{
     <input class="input-field" type="password" placeholder="Password" name="psw">
   </div>
 
+  <div class="input-container">
+    <select class="input-field" name = "plan" data-style="btn-info">
+          <option value = "basic">BASIC</option>
+          <option value = "pro">PRO</option>
+          <option value = "premium">PREMIUM</option>
+      </select>      
+  </div>
+
   <button type="submit" class="btn">Register</button>
 </form>
 
