--- a/fitness/templates/signup.html
+++ b/fitness/templates/signup.html
@@ -76,11 +76,12 @@ h2{
     <div class="picture">
         <img src="{% static 'img/imgg.png' %}" width=50px height=50px>
     </div>
-<form style="max-width:500px;margin:auto">
+<form method='post' action='signup' style="max-width:500px;margin:auto">
+  {% csrf_token %}
   <h2>Register Form</h2>
   <div class="input-container">
     <i class="fa fa-user icon"></i>
-    <input class="input-field" type="text" placeholder="Username" name="usrnm">
+    <input class="input-field" type="text" placeholder="Username" name="name">
   </div>
 
   <div class="input-container">
@@ -90,17 +91,8 @@ h2{
 
   <div class="input-container">
     <i class="fa fa-key icon"></i>
-    <input class="input-field" type="password" placeholder="Password" name="psw">
+    <input class="input-field" type="password" placeholder="Password" name="password">
   </div>
-
-  <div class="input-container">
-    <select class="input-field" name = "plan" data-style="btn-info">
-          <option value = "basic">BASIC</option>
-          <option value = "pro">PRO</option>
-          <option value = "premium">PREMIUM</option>
-      </select>      
-  </div>
-
   <button type="submit" class="btn">Register</button>
 </form>
 
