--- a/fitness/templates/pricing.html
+++ b/fitness/templates/pricing.html
@@ -1,4 +1,6 @@
+{% extends "base.html" %}
 {% load static %}
+{% block content %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -78,9 +80,6 @@ body, html {
 </head>
 <body>
 
-    <div class="picture">
-      <img src="{% static 'img/imgg.png' %}" width=50px height=50px>
-    </div>
 <div class="columns">
   <ul class="price">
     <li class="header">Basic</li>
@@ -116,6 +115,4 @@ body, html {
     <li class="grey"><a href="signup" class="button">Sign Up</a></li>
   </ul>
 </div>
-
-</body>
-</html>
+{% endblock content %}
