--- a/fitness/templates/trainers.html
+++ b/fitness/templates/trainers.html
@@ -1,4 +1,6 @@
+{% extends "base.html" %}
 {% load static %}
+{% block content %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -83,9 +85,7 @@ h1{
 	<title>Trainers</title>
 </head>
 <body>
-	<div class="picture">
-    	<img src="{% static 'img/imgg.png' %}" width=50px height=50px>
-  	</div>
+
   <div>
 	 <h1>MEET OUR TRAINERS</h1>
   </div>
@@ -107,5 +107,4 @@ h1{
     </div>
   </div>
     {% endfor %}
-</body>
-</html>
+{% endblock content %}
