--- a/fitness/templates/signup.html
+++ b/fitness/templates/signup.html
@@ -81,17 +81,17 @@ h2{
   <h2>Register Form</h2>
   <div class="input-container">
     <i class="fa fa-user icon"></i>
-    <input class="input-field" type="text" placeholder="Username" name="name">
+    <input class="input-field" type="text" placeholder="Username" name="name" required>
   </div>
 
   <div class="input-container">
     <i class="fa fa-envelope icon"></i>
-    <input class="input-field" type="text" placeholder="Email" name="email">
+    <input class="input-field" type="email" placeholder="Email" name="email" required>
   </div>
 
   <div class="input-container">
     <i class="fa fa-key icon"></i>
-    <input class="input-field" type="password" placeholder="Password" name="password">
+    <input class="input-field" type="password" placeholder="Password" name="password" required>
   </div>
   <label for="fname" style="color:white;">Select Plan</label>
   <div class="input-container">
