--- a/fitness/templates/index.html
+++ b/fitness/templates/index.html
@@ -81,12 +81,13 @@ section{
 }
 .container {
   position :relative;
+  margin : 0%;
+  padding-bottom: 0%;
 }
 
 .text-block {
   position: absolute;
   top: 0px;
-  bottom: 20px;
   background-color: #696464;
   color: white;
   padding-left: 20px;
@@ -101,8 +102,8 @@ section{
   position: absolute;
   top: 0px;
   bottom: 20px;
-  background-color: #f9f9f9;
-  color: #504658;
+  background-color: #ffd2a5;
+  color: #393e46;
   padding-left: 20px;
   padding-right: 20px;
   justify-content: center;
